Removed the head problem and still trying to figure out how to correctly scale the page down when opening it on mobile.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -364,7 +364,7 @@ footer {
   }
 
   .project-card {
-    min-width: 364px;
+    min-width: 330px;
   }
 
   /* USES page jsx Mobile CSS */
