--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -25,7 +25,7 @@
 }
 
 .footer ul a:hover {
-  color: #333;
+  color: #14B8A6;
   text-decoration: underline;
 }
 
