--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -80,6 +80,7 @@
     display: flex;
     flex-direction: column; /* Change to column layout on mobile */
     align-items: start; /* Left justify links */
+    font-size: 28px;
   }
 
   .menu-container .menu-items li {
@@ -91,6 +92,6 @@
   .menu-toggle-container {
     color: #000;
     text-align: Right;
-    font-size: 1.2rem;
+    font-size: 26px;
   }
 }
