--- a/src/components/ThemeSwitcher/ThemeSwitcher.css
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.css
@@ -38,7 +38,7 @@
 @media (max-width: 768px) {
   .btn {
     position: fixed;
-    top: 8px;
-    right: 50px;
+    top: 13px;
+    right: 52px;
   }
 }
